Fixed errors in QueryDoc, ExpandedQueryDoc