@@ -2,7 +2,6 @@ package unipd.se;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
-import unipd.se.model.ExpandedQueryDoc;
 import unipd.se.model.QueryDoc;
 
 import java.io.File;
@@ -10,44 +9,20 @@ import java.io.IOException;
 import java.util.*;
 
 /**
- * State-of-the-art Evaluator for IR results.
- * Computes Recall@k, Precision@k, MAP, MRR, and nDCG@k for a set of queries.
- * Can handle multiple relevant documents per query and expanded queries.
+ * Evaluator for IR results.
+ * Computes Recall@k, MAP, MRR, and nDCG@10.
+ * Supports QueryDoc and subclasses (e.g., ExpandedQueryDoc).
  */
 public final class Evaluator {
 
     private Evaluator() {}
 
     /**
-     * Evaluate standard queries.
+     * Evaluate queries (works for both QueryDoc and subclasses).
      */
     public static void evaluate(
             Map<String, List<String>> results,
-            List<QueryDoc> queries,
-            ObjectNode config,
-            String outputFilePath
-    ) throws IOException {
-        evaluateInternal(results, queries, config, outputFilePath);
-    }
-
-    /**
-     * Evaluate expanded queries.
-     */
-    public static void evaluateExpanded(
-            Map<String, List<String>> results,
-            List<ExpandedQueryDoc> queries,
-            ObjectNode config,
-            String outputFilePath
-    ) throws IOException {
-        evaluateInternal(results, queries, config, outputFilePath);
-    }
-
-    /**
-     * Generic internal evaluator for both QueryDoc and ExpandedQueryDoc.
-     */
-    private static <T> void evaluateInternal(
-            Map<String, List<String>> results,
-            List<T> queries,
+            List<? extends QueryDoc> queries,
             ObjectNode config,
             String outputFilePath
     ) throws IOException {
@@ -58,24 +33,20 @@ public final class Evaluator {
         double ndcgAt10 = 0.0;
         double map = 0.0;
 
-        for (T qObj : queries) {
-            String qid;
+        for (QueryDoc q : queries) {
+
+            String qid = q.index;
             Set<String> goldSet = new HashSet<>();
 
-            if (qObj instanceof QueryDoc qd) {
-                qid = qd.index;
-                if (qd.pubkey != null) goldSet.add(qd.pubkey);
-            } else if (qObj instanceof ExpandedQueryDoc eqd) {
-                qid = eqd.index;
-                if (eqd.pubkey != null) goldSet.add(eqd.pubkey);
-            } else {
-                continue;
+            if (q.pubkey != null) {
+                goldSet.add(q.pubkey);
             }
 
-            List<String> ranked = results.getOrDefault(qid, List.of());
+            List<String> ranked = results.getOrDefault(qid, Collections.emptyList());
+
             int rank = -1;
 
-            // Compute rank of first relevant document for MRR
+            // Find first relevant document
             for (int i = 0; i < ranked.size(); i++) {
                 if (goldSet.contains(ranked.get(i))) {
                     rank = i + 1;
@@ -96,34 +67,36 @@ public final class Evaluator {
             double dcg = 0.0;
             double idcg = 0.0;
             int k = Math.min(10, ranked.size());
-            int i = 0;
             int relCount = goldSet.size();
 
-            // DCG
-            for (i = 0; i < k; i++) {
-                String docId = ranked.get(i);
-                if (goldSet.contains(docId)) {
-                    dcg += 1.0 / log2(i + 2);  // rank i -> log2(i+2)
+            for (int i = 0; i < k; i++) {
+                if (goldSet.contains(ranked.get(i))) {
+                    dcg += 1.0 / log2(i + 2);
                 }
             }
 
-            // IDCG
-            for (i = 0; i < Math.min(relCount, 10); i++) {
+            for (int i = 0; i < Math.min(relCount, 10); i++) {
                 idcg += 1.0 / log2(i + 2);
             }
 
-            if (idcg > 0) ndcgAt10 += dcg / idcg;
+            if (idcg > 0) {
+                ndcgAt10 += dcg / idcg;
+            }
 
             // MAP
             double avgPrecision = 0.0;
             int hitCount = 0;
-            for (i = 0; i < ranked.size(); i++) {
+
+            for (int i = 0; i < ranked.size(); i++) {
                 if (goldSet.contains(ranked.get(i))) {
                     hitCount++;
-                    avgPrecision += hitCount / (double)(i + 1);
+                    avgPrecision += hitCount / (double) (i + 1);
                 }
             }
-            if (hitCount > 0) map += avgPrecision / hitCount;
+
+            if (hitCount > 0) {
+                map += avgPrecision / hitCount;
+            }
         }
 
         double denom = total == 0 ? 1.0 : total;
